--- a/app/src/main/res/anim/rotate_open_anim.xml
+++ b/app/src/main/res/anim/rotate_open_anim.xml
@@ -3,8 +3,9 @@
     android:fillAfter="true">
     <rotate
         android:duration="300"
-        android:fromDegrees="0"
+        android:fromDegrees="45"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:toDegrees="360" />
+        android:interpolator="@android:anim/linear_interpolator"
+        android:toDegrees="0" />
 </set>
