--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,59 +25,68 @@
             android:layout_gravity="center|center_horizontal|center_vertical"
             android:visibility="gone" />
 
-        <com.nambimobile.widgets.efab.ExpandableFabLayout
-            android:id="@+id/expandable_fab_layout"
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addPropertyFab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|bottom"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginBottom="130dp"
+            android:background="@color/colorAccent"
+            android:clickable="true"
+            android:contentDescription="@string/add_a_new_property"
+            android:focusable="true"
+            android:tint="@color/colorAccent"
+            android:visibility="invisible"
+            app:backgroundTint="@color/colorAccent"
+            app:fabSize="mini"
+            app:pressedTranslationZ="12dp"
+            app:rippleColor="@color/colorPrimaryDark"
+            app:srcCompat="@drawable/ic_house_24dp" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addAgentFab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|bottom"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginBottom="90dp"
+            android:background="@color/colorAccent"
+            android:clickable="true"
+            android:contentDescription="@string/add_a_new_agent"
+            android:focusable="true"
+            android:tint="@color/colorAccent"
+            android:visibility="invisible"
+            app:backgroundTint="@color/colorAccent"
+            app:fabSize="mini"
+            app:pressedTranslationZ="12dp"
+            app:rippleColor="@color/colorPrimaryDark"
+            app:srcCompat="@drawable/ic_person_add_24dp" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addFab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
+            android:clickable="true"
+            android:contentDescription="Add button"
+            android:focusable="true"
+            android:tint="@color/colorAccent"
+            app:backgroundTint="@color/colorAccent"
+            app:layout_anchor="@id/bottomAppBar"
+            app:srcCompat="@drawable/ic_add_24dp" />
+
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/bottomAppBar"
+            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <com.nambimobile.widgets.efab.Overlay
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:overlay_orientation="portrait" />
-
-            <com.nambimobile.widgets.efab.ExpandableFab
-                android:id="@+id/expandable_fab_portrait"
-                android:layout_width="wrap_content"
-                android:contentDescription="@string/fab_add"
-                android:layout_height="wrap_content"
-                app:efab_iconAnimationRotationDeg="0.0"
-                app:efab_orientation="portrait"
-                app:layout_anchor="@id/bottomAppBar" />
-
-            <com.nambimobile.widgets.efab.FabOption
-                android:id="@+id/fabAddProperty"
-                android:layout_width="wrap_content"
-                android:contentDescription="@string/property_add"
-                android:layout_height="wrap_content"
-                app:fab_icon="@drawable/ic_house_24dp"
-                app:fab_orientation="portrait"
-                app:label_text="Add Property" />
-
-            <com.nambimobile.widgets.efab.FabOption
-                android:id="@+id/fabAddAgent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:fab_icon="@drawable/ic_person_add_24dp"
-                app:fab_orientation="portrait"
-                app:label_text="Add Agent" />
-
-
-            <com.nambimobile.widgets.efab.Overlay
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:overlay_orientation="landscape" />
-
-            <com.google.android.material.bottomappbar.BottomAppBar
-                android:id="@+id/bottomAppBar"
-                style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                app:hideOnScroll="true"
-                app:fabAlignmentMode="center"
-                tools:ignore="BottomAppBar" />
-
-        </com.nambimobile.widgets.efab.ExpandableFabLayout>
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:fabAlignmentMode="center"
+            app:hideOnScroll="true"
+            tools:ignore="BottomAppBar" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
