--- a/app/src/main/res/layout/loan_fragment.xml
+++ b/app/src/main/res/layout/loan_fragment.xml
@@ -112,6 +112,7 @@
             android:layout_marginTop="@dimen/marginTop"
             android:text="@{ @string/loanResult(viewModel.loanTerm,viewModel.interestInDollar, viewModel.monthlyLoan ) }"
             android:visibility="gone"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/calculLoan" />
