--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -153,7 +153,9 @@
     <fragment
         android:id="@+id/loanFragment"
         android:name="com.openclassrooms.realestatemanager.presentation.ui.loan.LoanFragment"
-        android:label="Loan Simulator"
-        app:popUpTo="@id/itemTabsFragment2"
-        app:popUpToInclusive="true" />
+        android:label="Loan Simulator">
+        <action
+            android:id="@+id/action_loanFragment_to_itemTabsFragment2"
+            app:destination="@id/itemTabsFragment2" />
+    </fragment>
 </navigation>
