--- a/app/src/main/res/navigation/mobile_detail_nav_sub.xml
+++ b/app/src/main/res/navigation/mobile_detail_nav_sub.xml
@@ -8,9 +8,17 @@
         android:id="@+id/propertyDetailFragmentWide"
         android:name="com.openclassrooms.realestatemanager.presentation.ui.property.PropertyDetailFragment"
         android:label="PropertyDetailFragment"
-        tools:layout="@layout/property_detail" />
+        tools:layout="@layout/property_detail">
+        <action
+            android:id="@+id/action_propertyDetailFragmentWide_to_addEditPropertyFragment2"
+            app:destination="@id/addEditPropertyFragmentWide" />
+    </fragment>
     <argument
         android:name="property"
         app:argType="com.openclassrooms.realestatemanager.domain.model.property.Property"
         app:nullable="true" />
+    <fragment
+        android:id="@+id/addEditPropertyFragmentWide"
+        android:name="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddEditPropertyFragment"
+        android:label="AddEditPropertyFragment" />
 </navigation>
