--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
+        android:id="@+id/mainCoordinator"
         android:layout_height="match_parent"
         tools:context=".presentation.MainActivity">
 
@@ -25,63 +26,8 @@
             android:layout_gravity="center|center_horizontal|center_vertical"
             android:visibility="gone" />
 
-        <com.nambimobile.widgets.efab.ExpandableFabLayout
-            android:id="@+id/expandable_fab_layout"
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <com.nambimobile.widgets.efab.Overlay
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:overlay_orientation="portrait" />
-
-            <com.nambimobile.widgets.efab.ExpandableFab
-                android:id="@+id/expandable_fab_portrait"
-                android:layout_width="wrap_content"
-                android:contentDescription="@string/fab_add"
-                android:layout_height="wrap_content"
-                app:efab_iconAnimationRotationDeg="0.0"
-                app:efab_orientation="portrait"
-                app:layout_anchor="@id/bottomAppBar2" />
-
-            <com.nambimobile.widgets.efab.FabOption
-                android:id="@+id/fabAddProperty"
-                android:layout_width="wrap_content"
-                android:contentDescription="@string/property_add"
-                android:layout_height="wrap_content"
-                app:fab_icon="@drawable/ic_house_24dp"
-                app:fab_orientation="portrait"
-                app:label_text="Add Property" />
-
-            <com.nambimobile.widgets.efab.FabOption
-                android:id="@+id/fabAddAgent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:fab_icon="@drawable/ic_person_add_24dp"
-                app:fab_orientation="portrait"
-                app:label_text="Add Agent" />
-
-
-            <com.nambimobile.widgets.efab.Overlay
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:overlay_orientation="landscape" />
-
-            <com.google.android.material.bottomappbar.BottomAppBar
-                android:id="@+id/bottomAppBar2"
-                style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                app:hideOnScroll="true"
-                app:fabAlignmentMode="center"
-                tools:ignore="BottomAppBar" />
-
-        </com.nambimobile.widgets.efab.ExpandableFabLayout>
-
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/addPropertyFab"
+            android:id="@+id/fabAddProperty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|bottom"
@@ -101,7 +47,7 @@
             app:srcCompat="@drawable/ic_house_24dp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/addAgentFab"
+            android:id="@+id/fabAddAgent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|bottom"
@@ -128,6 +74,7 @@
             android:clickable="true"
             android:contentDescription="Add button"
             android:focusable="true"
+            app:behavior_autoHide="false"
             android:tint="@color/colorAccent"
             app:backgroundTint="@color/colorAccent"
             app:layout_anchor="@id/bottomAppBar"
