--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,10 +72,10 @@
             android:layout_height="wrap_content"
             android:background="@color/colorAccent"
             android:clickable="true"
-            android:contentDescription="Add button"
+            android:contentDescription="@string/add_button"
             android:focusable="true"
             app:behavior_autoHide="false"
-            android:tint="@color/colorAccent"
+            android:tint="@android:color/white"
             app:backgroundTint="@color/colorAccent"
             app:layout_anchor="@id/bottomAppBar"
             app:srcCompat="@drawable/ic_add_24dp" />
@@ -86,6 +86,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            app:titleTextColor="@color/white"
             app:fabAlignmentMode="center"
             app:hideOnScroll="true"
             tools:ignore="BottomAppBar" />
