--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -106,8 +106,8 @@
         <action
             android:id="@+id/action_itemTabsFragment2_to_addPropertyFragment"
             app:destination="@id/addEditPropertyFragment"
-            app:enterAnim="@android:anim/slide_in_left"
-            app:exitAnim="@android:anim/slide_out_right" />
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out" />
         <action
             android:id="@+id/action_itemTabsFragment2_to_propertyDetailFragment"
             app:destination="@id/propertyDetailFragment"
@@ -120,7 +120,9 @@
             app:nullable="true" />
         <action
             android:id="@+id/action_itemTabsFragment2_to_addAgentFragment"
-            app:destination="@id/addEditAgentFragment" />
+            app:destination="@id/addEditAgentFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out" />
         <action
             android:id="@+id/action_itemTabsFragment2_to_propertySearchDialogFragment"
             app:destination="@id/propertySearchDialogFragment" />
