--- a/app/src/main/res/layout/add_property_fragment.xml
+++ b/app/src/main/res/layout/add_property_fragment.xml
@@ -271,13 +271,12 @@
 
 
         <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/bottomAppBar2"
+            android:id="@+id/bottomAppBar"
             style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             app:fabAlignmentMode="end"
-            app:navigationIcon="@drawable/ic_menu_24dp"
             app:title="Add a new property" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -289,7 +288,7 @@
             android:contentDescription="@string/add_property_button"
             android:onClick="@{(view) -> viewModel.saveProperty() }"
             app:backgroundTint="@color/colorAccent"
-            app:layout_anchor="@id/bottomAppBar2"
+            app:layout_anchor="@id/bottomAppBar"
             android:tint="@color/white"
             app:srcCompat="@drawable/ic_check_24dp" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
