--- a/app/src/main/res/layout-sw600dp/add_property_fragment.xml
+++ b/app/src/main/res/layout-sw600dp/add_property_fragment.xml
@@ -36,6 +36,24 @@
         android:layout_height="match_parent"
         tools:context=".presentation.ui.addProperty.AddEditPropertyFragment">
 
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/app_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:theme="@style/MyActionBarTheme"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/loan_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:layout_scrollFlags="scroll|enterAlways|snap"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        </com.google.android.material.appbar.AppBarLayout>
+
         <androidx.core.widget.NestedScrollView
             android:id="@+id/nestedScrollView"
             android:layout_width="match_parent"
@@ -109,8 +127,8 @@
                     style="@style/TextAppearance.MaterialComponents.Subtitle1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
                     android:layout_marginStart="@dimen/marginStart"
+                    android:layout_marginTop="20dp"
                     android:text="@string/property_type"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -155,8 +173,8 @@
                     style="@style/TextAppearance.MaterialComponents.Subtitle1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
                     android:layout_marginStart="@dimen/marginStart"
+                    android:layout_marginTop="20dp"
                     android:text="@string/characteristics"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -248,8 +266,8 @@
                     style="@style/TextAppearance.MaterialComponents.Subtitle1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
                     android:layout_marginStart="@dimen/marginStart"
+                    android:layout_marginTop="20dp"
                     android:text="@string/enter_media_title"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
