--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,13 @@
             android:layout_gravity="center|center_horizontal|center_vertical"
             android:visibility="gone" />
 
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/fabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:visibility="gone" />
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fabAddProperty"
             android:layout_width="wrap_content"
