--- a/app/src/main/res/layout/property_list_content.xml
+++ b/app/src/main/res/layout/property_list_content.xml
@@ -24,7 +24,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/marginTop"
-        android:background="@{property.sold ? @color/colorPrimary : @color/white }"
         app:cardElevation="2dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -46,6 +45,34 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/avatars" />
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/soldLayout"
+                android:layout_width="180dp"
+                android:layout_height="100dp"
+                android:alpha="0.4"
+                android:background="@color/white"
+                android:visibility="@{property.sold ? View.VISIBLE : View.GONE }"
+                app:layout_constraintBottom_toBottomOf="@+id/img_photo"
+                app:layout_constraintEnd_toEndOf="@+id/img_photo"
+                app:layout_constraintStart_toStartOf="@id/img_photo"
+                app:layout_constraintTop_toTopOf="@+id/img_photo" />
+
+            <TextView
+                android:id="@+id/text_sold"
+                style="@style/TextAppearance.AppCompat.Title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/sold"
+                android:textAlignment="center"
+                android:textColor="@color/colorAccent"
+                android:textSize="35sp"
+                android:textStyle="bold"
+                android:visibility="@{property.sold ? View.VISIBLE : View.GONE }"
+                app:layout_constraintBottom_toBottomOf="@+id/img_photo"
+                app:layout_constraintEnd_toEndOf="@+id/img_photo"
+                app:layout_constraintStart_toStartOf="@id/img_photo"
+                app:layout_constraintTop_toTopOf="@+id/img_photo" />
 
             <TextView
                 android:id="@+id/text_type"
@@ -76,29 +103,15 @@
                 currency="@{currency}"
                 price="@{property.price}"
                 android:layout_width="0dp"
+                android:textStyle="bold"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/text_margin"
                 android:textAppearance="?attr/textAppearanceListItem"
                 android:textColor="@color/colorAccent"
-                app:layout_constraintBottom_toTopOf="@id/text_sold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/img_photo"
                 app:layout_constraintTop_toBottomOf="@id/text_area" />
 
-            <TextView
-                android:id="@+id/text_sold"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/text_margin"
-                android:text="@string/sold"
-                android:textAppearance="?attr/textAppearanceListItem"
-                android:textColor="@color/colorAccent"
-                android:textStyle="bold"
-                android:visibility="@{property.sold ? View.VISIBLE : View.GONE }"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/img_photo"
-                app:layout_constraintTop_toBottomOf="@id/text_price" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 </layout>
