--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,6 +84,7 @@
             app:behavior_autoHide="false"
             android:tint="@android:color/white"
             app:backgroundTint="@color/colorAccent"
+            app:layout_behavior="com.openclassrooms.realestatemanager.utils.ScrollAwareFABBehavior"
             app:layout_anchor="@id/bottomAppBar"
             app:srcCompat="@drawable/ic_add_24dp" />
 
