change sold layout in property_list_content.xml item list
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="white">#ffff</color>
     <color name="grey_20">#cccccc</color>
+    <color name="grey_10">#F1F1F1</color>
     <color name="grey_80">#37474F</color>
 </resources>
