--- a/app/src/main/res/layout/property_list_content.xml
+++ b/app/src/main/res/layout/property_list_content.xml
@@ -48,13 +48,12 @@
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/soldLayout"
-                android:layout_width="180dp"
+                android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:alpha="0.4"
-                android:background="@color/white"
+                android:background="@color/grey_10"
                 android:visibility="@{property.sold ? View.VISIBLE : View.GONE }"
                 app:layout_constraintBottom_toBottomOf="@+id/img_photo"
-                app:layout_constraintEnd_toEndOf="@+id/img_photo"
                 app:layout_constraintStart_toStartOf="@id/img_photo"
                 app:layout_constraintTop_toTopOf="@+id/img_photo" />
 
